--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   font_awesome_flutter: ^9.2.0
   google_fonts: ^2.1.0
   url_launcher: ^6.0.9
+  webview_flutter: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -91,4 +92,4 @@ flutter:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "images/logo.png"
+  image_path: "images/logold.png"
